Wed May 21 11:42:31 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: workaround for Info.plist to get rid of `dsymutil`
	  crash by wrong files in parent directories.
	  [ruby-core:62594] [Bug #9840]

Tue May 20 20:57:34 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_dir.rb (test_glob): added testcase of double
	  slash path.

Tue May 20 04:58:54 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Don't check fields of struct tcp_info if the
	  structure is not available.

Mon May 19 23:13:33 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_tcp_info): Permit longer data.  (glibc
	  2.7 adds tcpi_rcv_rtt, tcpi_rcv_space and tcpi_total_retrans to
	  struct tcp_info.)

Mon May 19 20:49:07 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_tcp_info): New function to inspect
	  struct tcp_info.
	  (sockopt_inspect): Use inspect_tcp_info.

	* ext/socket/extconf.rb: Check tcp_info related things.

	* ext/socket/rubysocket.h: Include netinet/tcp_fsm.h if available.

Mon May 19 19:36:39 2014  Tanaka Akira  <akr@fsij.org>

	* test/dbm/test_dbm.rb: Use Etc.uname.

	* test/gdbm/test_gdbm.rb: Ditto.

Mon May 19 16:54:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_uname): add support for Windows using
	  GetVersionExW(), GetSystemInfo(), and GetComputerNameExW() with
	  `ComputerNameDnsHostname`.  [Feature #9842]

Mon May 19 16:29:48 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_pat_search): advance by byte offset but not by char
	  offset.  [ruby-core:62669] [Bug #9849]

Mon May 19 14:06:18 2014  Shota Fukumori  <her@sorah.jp>

	* bin/testrb: Removed. Forgot to remove in r45971.
	  [Feature #9711] [ruby-core:62620]

Sun May 18 16:42:08 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_m17n_comb.rb (test_str_crypt): Use Etc.confstr to
	  detect the glibc version.
	  libc.so is not an executable on Debian GNU/kFreeBSD 7.0 (wheezy).
